# mcp-runtime

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Dockerfile.operator  Makefile  Makefile.operator  README.md  go.mod  go.sum
.claude/: README.md
.github/workflows/: ci.yaml  security-gosec.yaml  security-trivy.yaml
api/v1alpha1/: access_types.go  deepcopy_test.go  mcpserver_types.go  register.go  (+4 more)
docs/: .dockerignore  Dockerfile  README.md  api.md  architecture.md  cli.md  cluster-readiness.md  cmd-mcp-runtime.md  getting-started.md  internal-cli.md  mkdocs.yml  nginx.conf  pkg-metadata.md  publish-mcp-server.md  requirements.txt  runtime.md  sentinel.md  tests.md
examples/: mcpserver-path-based.yaml
examples/rust-mcp-server/: .dockerignore  Cargo.toml  Dockerfile
examples/rust-mcp-server/.mcp/: servers.yaml
examples/rust-mcp-server/src/: main.rs
hack/: deps.sh  go-test.sh  smoke-ci.sh
k8s/: 00-namespace.yaml  01-config.yaml  02-secrets.yaml  02-secrets.yaml.example  03-clickhouse-hostpath.yaml  03-clickhouse.yaml  04-clickhouse-init.yaml  05-kafka-hostpath.yaml  05-kafka.yaml  06-ingest.yaml  07-processor.yaml  08-api-rbac.yaml  08-api.yaml  09-ui.yaml  10-gateway.yaml  11-prometheus.yaml  12-grafana.yaml  13-mcp-example.yaml  14-mcp-proxy-sidecar.yaml  15-otel-collector.yaml  16-tempo.yaml  17-loki.yaml  18-promtail.yaml  19-grafana-datasources.yaml  20-postgres.yaml  21-platform-admin-bootstrap-job.yaml  README-example-mcp.md
test/: smoketest.sh
tests/: smoketest.sh
website/: Dockerfile  README.md  app.py
(+267 files in other folders)
