[package]
name = "rust-example-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
rmcp = { version = "1.5.0", features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net"] }
